<resources>
    <string name="app_name">fiapapp</string>

    <!-- Registration -->
    <string name="continue_text">Registrar-se</string>
    <string name="register_text">Crie sua conta!</string>
    <string name="first_name">Nome</string>
    <string name="last_name">Sobrenome</string>
    <string name="phone_number">Telefone</string>

    <!-- Navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Buttons and Actions -->
    <string name="back_button">Voltar</string>
    <string name="submit_purchase">Confirmar Compra</string>

    <!-- Vehicle Details -->
    <string name="car_image">Imagem do Veículo</string>
    <string name="vehicle_name">HB20</string>
    <string name="hb20_name">Hyundai HB20 - 2021</string>
    <string name="onix_name">Chevrolet Onix - 2021</string>
    <string name="polo_name">Volkswagen Polo - 2021</string>
    <string name="onix_image">Chevrolet Onix - 2021</string>
    <string name="polo_image">Volkswagen Polo - 2021</string>

    <string name="vehicle_details_title">Detalhes do Veículo</string>
    <string name="additions_title">Adicionar</string>
    <string name="discount_title">Desconto</string>
    <string name="price_title">Preço</string>

    <!-- Menu -->
    <string name="menu_home">Início</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
